feat: Add custom BakedModel for fluid pipes